# Amber_B1

./: README.md  static_bridge.cpp
amber_robot/amber_linking_node/: CMakeLists.txt  package.xml  setup.py
amber_robot/amber_linking_node/launch/: amber_drive.launch
amber_robot/amber_linking_node/src/amber_link/: amber_link.py
amber_robot/amber_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
amber_robot/amber_moveit_config/config/: amber_urdf.srdf  fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  ros_controllers.yaml  simple_moveit_controllers.yaml  stomp_planning.yaml
amber_robot/amber_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  simple_moveit_controller_manager.launch.xml  stomp_planning_pipeline.launch.xml
amber_robot/amber_urdf_description/launch/: controller.launch  display.launch  gazebo.launch
amber_robot/amber_urdf_description/urdf/: amber_b1.urdf  amber_b1_generated.urdf  amber_urdf.trans  amber_urdf.xacro
